[tool.poetry]
name = "warc-extractor"
version = "0.1.1"
description = "A simple tool for extracting warc files."
homepage = "https://blog.ak-rc.net/2022/06/warc-extractor-update/"
repository = "https://github.com/recrm/ArchiveTools"
authors = ["Ryan Chartier <redrecrm@gmail.com>"]
keywords = ["warc"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
warc-extractor = 'warc_extractor.warc_extractor:main'
